# StudyRepo

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
core/apps/labs/: admin.py  api.py  apps.py  models.py
core/apps/labs/migrations/: 0001_initial.py  0002_labtask_solution_file.py
core/apps/users/: admin.py  api.py  models.py  schema.py
core/apps/users/migrations/: 0001_initial.py
core/project/: asgi.py  settings.py  urls.py  wsgi.py
test/: test_auth.py
tests/: conftest.py  factories.py  test_core_api.py  test_core_models.py  test_users_api.py  test_users_models.py
